--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 buddy-alloc = { version = "0.4.1", optional = true }
+lazy_static = "1.4.0"
+fastrand = "1.6.0"
 
 [profile.release]
 opt-level = "z"
