--- a/.github/workflows/wasm4.yml
+++ b/.github/workflows/wasm4.yml
@@ -26,3 +26,12 @@ jobs:
 
     - name: Build
       run: cargo build --release
+
+    - name: Install binaryen
+      run: sudo apt-get install -y binaryen
+
+    - name: Optimise cart
+      run: wasm-opt target/wasm32-unknown-unknown/release/cart.wasm -o cart-opt.wasm -Oz --strip-dwarf --strip-producers --zero-filled-memory
+
+    - name: Bundle cart
+      run: w4 bundle cart-opt.wasm --title "Snake" --html index.html
