--- a/.github/workflows/wasm4.yml
+++ b/.github/workflows/wasm4.yml
@@ -4,8 +4,19 @@ on:
   push:
     branches: [ "master", "test" ]
 
+  workflow_dispatch:
+
 env:
   CARGO_TERM_COLOR: always
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   deploy:
