--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -51,7 +51,7 @@ jobs:
           path: '.'
 
   deploy:
-    if: github.ref == 'refs/heads/master'
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
