--- a/.github/workflows/wasm4-build.yml
+++ b/.github/workflows/wasm4-build.yml
@@ -28,7 +28,7 @@ jobs:
         run: rustup target add wasm32-unknown-unknown
 
       - name: Run rustfmt
-        run: cargo fmt --all -- --check
+        run: cargo fmt
 
       - name: Build
         run: cargo build --verbose
