--- a/.github/workflows/wasm4-build.yml
+++ b/.github/workflows/wasm4-build.yml
@@ -27,13 +27,19 @@ jobs:
       - name: Set wasm target
         run: rustup target add wasm32-unknown-unknown
 
-      - name: Run rustfmt
-        run: cargo fmt
-
       - name: Build
         run: cargo build --verbose
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+    
+      - name: Run rustfmt
+        run: cargo fmt
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "chore: apply rustfmt" 
+
 
