--- a/.github/workflows/wasm4-build.yml
+++ b/.github/workflows/wasm4-build.yml
@@ -13,7 +13,19 @@ permissions:
   contents: write
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+    
+      - name: Run rustfmt
+        run: cargo fmt
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "chore: apply rustfmt" 
   build:
+    needs: format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,17 +41,5 @@ jobs:
 
       - name: Build
         run: cargo build --verbose
-
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-    
-      - name: Run rustfmt
-        run: cargo fmt
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "chore: apply rustfmt" 
 
 
